1999-09-17  Alan Modra  <alan@spri.levels.unisa.edu.au>

	* ld-shared/shared.exp: xfail linux*libc1 shared (non PIC, load
	offset) test.

1999-09-12  Ian Lance Taylor  <ian@zembu.com>

	* ld-scripts/script.exp: Add --image-base 0 for PE targets.

1999-08-17  H.J. Lu  <hjl@gnu.org>

	* ld-cdtest/cdtest-foo.cc (Foo::init_foo): Use "%ld" for sizeof.

1999-08-09  Jakub Jelinek  <jj@ultra.linux.cz>

	* ld-elfvers/vers.exp: Run tests on sparc*-*-linux*.
	* ld-shared/shared.exp: Likewise.

1999-07-28  Nick Clifton  <nickc@cygnus.com>

	* lib/ld-lib.exp (proc big_or_little_endian): New proc.
	Determine if a big endian or little endian output format hass
	been selected by any of the multilib options, and if so return
	a suitable command line option for the linker/assembler.
	(proc default_ld_link): Include the result of proc
	big_or_little_endian on the command line to the linker.
	(proc ld_simple_link): Include the result of proc
	big_or_little_endian on the command line to the linker.
	(proc default_ld_compile): Append multilib flags to compiler
	switches.
	(proc default_ld_assemble): Include the result of proc
	big_or_little_endian on the command line to the linker.

1999-07-21  H.J. Lu  <hjl@gnu.org>

	* ld-elfvers/vers1.c: Add missing prototypes and include
	<stdio.h> if necessary.
	* ld-elfvers/vers15.c: Likewise.
	* ld-elfvers/vers19.c: Likewise.
	* ld-elfvers/vers2.c: Likewise.
	* ld-elfvers/vers3.c: Likewise.
	* ld-elfvers/vers4.c: Likewise.
	* ld-elfvers/vers6.c: Likewise.
	* ld-elfvers/vers7.c: Likewise.
	* ld-elfvers/vers9.c: Likewise.
	* ld-shared/main.c: Likewise.
	* ld-srec/sr3.cc (Foo::Foo): Remove arg name.

Thu Jul 15 18:00:30 1999  Mark P. Mitchell  <mark@codesourcery.com>

	* ld-undefined/undefined.exp: XFAIL on IRIX6 for the usual as
	with other DWARF2 targets.

1999-07-13  Nick Clifton  <nickc@cygnus.com>

	* ld-undefined/undefined.exp: Do not expect arm toolchains to fail
	the undefined line test.

1999-07-10  Ian Lance Taylor  <ian@zembu.com>
